IHR2-4452: Correct unit test